# CS5330

./: README.md
Project1/: CMakeLists.txt  README.md  faceDetect.cpp  faceDetect.h  filter.cpp  filter.h  imgDisplay.cpp  vidDisplay.cpp
Project2/: CMakeLists.txt  README.md  csv_util.cpp  csv_util.h  feature_extractor.cpp  feature_extractor.h  imageMatch.cpp  metric_calculator.cpp  metric_calculator.h  utils.cpp  utils.h  vector_database.cpp  vector_database.h
Project2/config/: sample_config.json  task1.json  task2.json  task3.json  task4.json  task5.json  task6.json  task7.json
Project3/: 2DRecog.cpp  CMakeLists.txt  README.md  feature.cpp  feature.h  segmentation.cpp  segmentation.h  utils.cpp  utils.h
Project4/: CMakeLists.txt  README.md  calibration.cpp  calibration.h  corner_detection.cpp  harris_corner.cpp  test.cpp  utils.h
Project5/: README.md  analyze.py  eval.py  experiment.py  generate_params.py  greek_letter.py  mnist.py  run_experiments.sh
ProjectFinal/MRPhotoBoard/: DragAndDrop.cs  DrawRectangleOnWall.cs  MRPhotoBoard.cs  ShowPhotoPad.cs
ProjectFinal/MRPhotoBoard/code/: DrawRectangleOnWall.cs  MRPhotoBoard.cs  ShowPhotoPad.cs
