cmake_minimum_required(VERSION 2.8)
project( imgDisplay )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( imgDisplay imgDisplay.cpp )
target_link_libraries( imgDisplay ${OpenCV_LIBS} )

project( vidDisplay )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_library(filter STATIC filter.cpp)
add_library(faceDetect STATIC faceDetect.cpp)
target_link_libraries(faceDetect ${OpenCV_LIBS})
add_executable( vidDisplay vidDisplay.cpp filter.cpp faceDetect.cpp)
target_link_libraries( vidDisplay ${OpenCV_LIBS} filter faceDetect)

project( timeBlur )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( timeBlur timeBlur.cpp)
target_link_libraries( timeBlur ${OpenCV_LIBS} filter)

project( showFaces )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( showFaces showFaces.cpp )
target_link_libraries( showFaces ${OpenCV_LIBS} faceDetect)

project( example )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( example example.cc )
target_link_libraries( example ${OpenCV_LIBS} )
